# LaunchpadMK2Controller

./: CMakeLists.txt  LICENSE  README.md  launchpad-configurator.html
resources/: resources.rc
src/: Actions.h  ConfigLoader.cpp  ConfigLoader.h  Json.h  LedRenderer.cpp  LedRenderer.h  LightshowEngine.cpp  LightshowEngine.h  MidiManager.cpp  MidiManager.h  PageManager.cpp  PageManager.h  Types.h  main.cpp
